# noir-web-prover-circuits

./: .taplo.toml  Nargo.toml  README.md  justfile
.github/workflows/: check.yaml
chacha20/: Nargo.toml
chacha20/src/: chacha20.nr  lib.nr  nivc.nr  setup.nr  tests.nr
constraint_counter/: Cargo.toml
constraint_counter/src/: bridge.rs  main.rs  noir.rs  simple.rs  utils.rs
http/: Nargo.toml
http/src/: data.nr  http_verification.nr  lib.nr  nivc.nr  parser.nr  setup.nr  tests.nr  utils.nr
