[package]
name = "constraint_counter"
version = "0.1.0"
edition = "2021"

[dependencies]

ark-ff = { version = "^0.5.0", default-features = false, features = [
    "parallel",
    "asm",
] }
ark-std = { version = "^0.5.0", default-features = false, features = [
    "parallel",
] }
ark-relations = { version = "^0.5.0", default-features = false }
ark-r1cs-std = { version = "^0.5.0", default-features = false, features = [
    "parallel",
] }
ark-serialize = { version = "^0.5.0", default-features = false }
num-bigint = "0.4"

folding-schemes = { git = "https://github.com/privacy-scaling-explorations/sonobe", package = "folding-schemes" }

acvm = { git = "https://github.com/noir-lang/noir" }
bn254_blackbox_solver = { git = "https://github.com/noir-lang/noir" }
# acvm = { git = "https://github.com/winderica/noir", branch = "arkworks-next", default-features = false }

serde = { version = "^1.0.0", features = ["derive"] }
serde_json = "^1.0.0"
ark-bn254 = { version = "^0.5" }
