[package]
edition = "2021"
name    = "constraint_counter"
version = "0.1.0"

[dependencies]
clap = { version = "4.4", features = ["derive"] }

ark-ff = { version = "^0.5.0", default-features = false, features = [
  "parallel",
  "asm",
] }
ark-r1cs-std = { version = "^0.5.0", default-features = false, features = [
  "parallel",
] }
ark-relations = { version = "^0.5.0", default-features = false }
ark-serialize = { version = "^0.5.0", default-features = false }
ark-std = { version = "^0.5.0", default-features = false, features = [
  "parallel",
] }
num-bigint = "0.4"

acvm = { git = "https://github.com/noir-lang/noir" }

ark-bn254  = { version = "^0.5" }
serde      = { version = "^1.0.0", features = ["derive"] }
serde_json = "^1.0.0"

[profile.release]
codegen-units = 1
lto           = "fat"
opt-level     = 3
panic         = "abort"
strip         = true
